Added a books section in complementary, with new book cards. Fixed bububles hovering. Content changes in engineering-new ai tools category created

--- a/assets/scss/_bubbles.scss
+++ b/assets/scss/_bubbles.scss
@@ -39,7 +39,7 @@
     left: auto !important;
   }
   
-  @media (min-width: calc($bp-md + 1px)) {
+  @media (min-width: 761px) {
     &:hover {
       transform: scale(1.05);
       box-shadow: 0 8px 24px rgba(0, 0, 0, 0.15);
@@ -187,7 +187,7 @@
     rgba(59, 130, 246, 0.5));
   border: 2px solid rgb(59, 130, 246);
   
-  @media (min-width: calc($bp-md + 1px)) {
+  @media (min-width: 761px) {
     &:hover .bubble-anecdote {
       color: rgb(37, 99, 246);
       font-weight: 600;
@@ -205,7 +205,7 @@
       rgba(96, 165, 250, 0.2), 
       rgba(96, 165, 250, 0.4));
     
-    @media (min-width: calc($bp-md + 1px)) {
+    @media (min-width: 761px) {
       &:hover .bubble-anecdote {
         color: rgb(191, 219, 254);
         font-weight: 600;
@@ -226,7 +226,7 @@
     rgba(239, 68, 68, 0.5));
   border: 2px solid rgb(239, 68, 68);
   
-  @media (min-width: calc($bp-md + 1px)) {
+  @media (min-width: 761px) {
     &:hover .bubble-anecdote {
       color: rgb(220, 38, 38);
       font-weight: 600;
@@ -244,7 +244,7 @@
       rgba(248, 113, 113, 0.2), 
       rgba(248, 113, 113, 0.4));
     
-    @media (min-width: calc($bp-md + 1px)) {
+    @media (min-width: 761px) {
       &:hover .bubble-anecdote {
         color: rgb(252, 165, 165);
         font-weight: 600;
@@ -265,7 +265,7 @@
     rgba(34, 197, 94, 0.5));
   border: 2px solid rgb(34, 197, 94);
   
-  @media (min-width: calc($bp-md + 1px)) {
+  @media (min-width: 761px) {
     &:hover .bubble-anecdote {
       color: rgb(21, 128, 61);
       font-weight: 600;
@@ -283,7 +283,7 @@
       rgba(74, 222, 128, 0.2), 
       rgba(74, 222, 128, 0.4));
     
-    @media (min-width: calc($bp-md + 1px)) {
+    @media (min-width: 761px) {
       &:hover .bubble-anecdote {
         color: rgb(187, 247, 208);
         font-weight: 600;
@@ -304,7 +304,7 @@
     rgba(168, 85, 247, 0.5));
   border: 2px solid rgb(168, 85, 247);
   
-  @media (min-width: calc($bp-md + 1px)) {
+  @media (min-width: 761px) {
     &:hover .bubble-anecdote {
       color: rgb(126, 34, 206);
       font-weight: 600;
@@ -322,7 +322,7 @@
       rgba(192, 132, 252, 0.2), 
       rgba(192, 132, 252, 0.4));
     
-    @media (min-width: calc($bp-md + 1px)) {
+    @media (min-width: 761px) {
       &:hover .bubble-anecdote {
         color: rgb(216, 180, 254);
         font-weight: 600;
