--- a/layouts/_default/other-interests.html
+++ b/layouts/_default/other-interests.html
@@ -13,7 +13,7 @@
     {{ partial "cards/generic.html" (dict "Page" . "key" "languages") }}
     {{ partial "cards/generic.html" (dict "Page" . "key" "certifications") }}
     {{ partial "cards/generic.html" (dict "Page" . "key" "hobbies") }}
-    {{ partial "cards/generic.html" (dict "Page" . "key" "links") }}
+    {{ partial "cards/books.html" . }}
   </article>
 </div>
 {{ end }}
